; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_use_transform_feedback.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_use_transform_feedback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_state = type { %struct.wined3d_shader** }
%struct.wined3d_shader = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@WINED3D_SHADER_TYPE_GEOMETRY = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wined3d_state*)* @use_transform_feedback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @use_transform_feedback(%struct.wined3d_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.wined3d_state*, align 8
  %4 = alloca %struct.wined3d_shader*, align 8
  store %struct.wined3d_state* %0, %struct.wined3d_state** %3, align 8
  %5 = load %struct.wined3d_state*, %struct.wined3d_state** %3, align 8
  %6 = getelementptr inbounds %struct.wined3d_state, %struct.wined3d_state* %5, i32 0, i32 0
  %7 = load %struct.wined3d_shader**, %struct.wined3d_shader*** %6, align 8
  %8 = load i64, i64* @WINED3D_SHADER_TYPE_GEOMETRY, align 8
  %9 = getelementptr inbounds %struct.wined3d_shader*, %struct.wined3d_shader** %7, i64 %8
  %10 = load %struct.wined3d_shader*, %struct.wined3d_shader** %9, align 8
  store %struct.wined3d_shader* %10, %struct.wined3d_shader** %4, align 8
  %11 = icmp ne %struct.wined3d_shader* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @FALSE, align 4
  store i32 %13, i32* %2, align 4
  br label %21

14:                                               ; preds = %1
  %15 = load %struct.wined3d_shader*, %struct.wined3d_shader** %4, align 8
  %16 = getelementptr inbounds %struct.wined3d_shader, %struct.wined3d_shader* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %14, %12
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
